Add: Default navbar and logout

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /File-Sharing/wwwroot/File_Storage/User_1
 /File-Sharing/wwwroot/File_Storage/User_2
+/File-Sharing/wwwroot/File_Storage/User_3
